k8s/exposure/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: bonsai
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bonsai.local
      secretName: frontend-tls
  rules:
    - host: bonsai.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5114
